--- a/css/main.css
+++ b/css/main.css
@@ -35,11 +35,11 @@ p {
  * Selection color
  */
 ::-moz-selection {
-  background-color: #FA6862;
+  background-color: #02B7CE;
   color: #fff; }
 
 ::selection {
-  background-color: #FA6862;
+  background-color: #02B7CE;
   color: #fff; }
 
 /*
@@ -80,7 +80,7 @@ textarea, label {
     outline: 0 none; }
 
 .btn-primary {
-  background-color: #FA6862;
+  background-color: #02B7CE;
   border: 0;
   font-family: "Open Sans", sans-serif;
   font-weight: 700;
@@ -129,7 +129,7 @@ textarea, label {
 
 .primary,
 .link:hover {
-  color: #FA6862; }
+  color: #02B7CE; }
 
 .no-gutter {
   margin-left: 0;
@@ -160,7 +160,7 @@ textarea, label {
   justify-content: space-between; }
 
 .nicescroll-cursors {
-  background: #FA6862 !important; }
+  background: #02B7CE !important; }
 
 .preloader {
   bottom: 0;
@@ -178,7 +178,7 @@ textarea, label {
     display: none; }
 
 .loading-mask {
-  background-color: #FA6862;
+  background-color: #02B7CE;
   height: 100%;
   left: 0;
   position: absolute;
@@ -223,7 +223,7 @@ textarea, label {
 	Start Styling
 -------------------------------------------------*/
 .site-wrapper {
-  border-top: 4px solid #FA6862; }
+  border-top: 4px solid #02B7CE; }
 
 .page-close {
   font-size: 30px;
@@ -279,7 +279,7 @@ textarea, label {
       width: 96px;
       bottom: 14px; }
     .section-title h3::after {
-      background-color: #FA6862;
+      background-color: #02B7CE;
       width: 73px; }
   .section-title.light h3 {
     color: #fff; }
@@ -346,7 +346,7 @@ textarea, label {
         height: 15px; }
     .hexagon-item:hover .hex-item div::before,
     .hexagon-item:hover .hex-item div::after {
-      background-color: #FA6862; }
+      background-color: #02B7CE; }
     .hexagon-item:hover .hex-content svg {
       -webkit-transform: scale(0.97);
       -moz-transform: scale(0.97);
@@ -550,7 +550,7 @@ textarea, label {
     -ms-flex-positive: 1;
     flex-grow: 1; }
   .progress .bar {
-    background-color: #FA6862;
+    background-color: #02B7CE;
     border-radius: 10px;
     height: 8px;
     width: 0; }
@@ -573,8 +573,8 @@ textarea, label {
   .filter a {
     border-bottom: 2px solid transparent; }
   .filter .active {
-    color: #FA6862;
-    border-bottom-color: #FA6862; }
+    color: #02B7CE;
+    border-bottom-color: #02B7CE; }
 
 .works-item {
   font-family: "Open Sans", sans-serif;
@@ -622,7 +622,7 @@ textarea, label {
     -o-transform: translate3d(0px, 0px, 0px) scale(0);
     transform: translate3d(0px, 0px, 0px) scale(0); }
   .works-item h4 {
-    color: #FA6862;
+    color: #02B7CE;
     font-weight: 700;
     text-transform: uppercase; }
   .works-item p {
@@ -772,7 +772,7 @@ textarea, label {
       -o-transform: scale(1.5);
       transform: scale(1.5); }
     .service-hex:hover .st1 {
-      fill: #FA6862; }
+      fill: #02B7CE; }
     .service-hex:hover .content {
       width: 135%; }
     .service-hex:hover p {
@@ -832,7 +832,7 @@ textarea, label {
   -o-transition: all 0.3s ease 0s;
   transition: all 0.3s ease 0s; }
   .testimonials .owl-dot.active {
-    border-color: #FA6862; }
+    border-color: #02B7CE; }
 
 .tm-hex {
   position: relative;
@@ -942,11 +942,11 @@ textarea, label {
       -o-transform: translate(-50%, -50%);
       transform: translate(-50%, -50%); }
     .contact-social li:hover span {
-      background-color: #FA6862; }
+      background-color: #02B7CE; }
       .contact-social li:hover span::before {
-        border-bottom-color: #FA6862; }
+        border-bottom-color: #02B7CE; }
       .contact-social li:hover span::after {
-        border-top-color: #FA6862; }
+        border-top-color: #02B7CE; }
 
 .contact-social-hex {
   display: block;
@@ -977,9 +977,9 @@ textarea, label {
     width: 0;
     border-top: 12.41px solid #1e2530; }
   .contact-social-hex:hover::after {
-    border-bottom-color: #FA6862; }
+    border-bottom-color: #02B7CE; }
   .contact-social-hex:hover::before {
-    border-top-color: #FA6862; }
+    border-top-color: #02B7CE; }
 
 .contact-form .input-field {
   margin-bottom: 10px; }
@@ -1034,7 +1034,7 @@ textarea, label {
   margin-top: 15px; }
 
 .msg-success {
-  color: #FA6862; }
+  color: #02B7CE; }
 
 .pt-table.desktop-768 .pt-tablecell {
   padding-bottom: 110px;
@@ -1135,10 +1135,10 @@ textarea, label {
   cursor: pointer; }
 
 .color-options li.c0 {
-  background-color: #FA6862; }
+  background-color: #02B7CE; }
 
 .color-options li.c1 {
-  background-color: #02B7CE; }
+  background-color: #FA6862; }
 
 .color-options li.c2 {
   background-color: #86A438; }
